--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,12 @@
     }
   },
   "require-dev": {
-    "vimeo/psalm": "^3.2"
+    "vimeo/psalm": "^3.2",
+    "phpunit/phpunit": "^8.1"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "TM\\Tests\\": "tests/"
+    }
   }
 }
